--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
 :root {
-  display: flex;
-  justify-content: center;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
